# route-tracker-android

./: BEGINNER_CHECKLIST.md  DEPLOYMENT_GUIDE.md  PROJECT_SUMMARY.md  README.md  android-setup.md  android_complete_setup.md  app.py  build.sh  convert_icons.html  create_icons.py  models.py  pyproject.toml  render.yaml  render_setup.md  replit.md  requirements.txt  routes.py  start_server.bat  start_server.py  test_app.py  upload_to_github.md
attached_assets/: Pasted-i-want-to-build-a-app-and-main-goal-is-to-fully-published-on-playstore-first-overall-plan-is-i-w-1751805573924_1751805573925.txt
instance/: tracker.db
static/: manifest.json  sw.js
static/css/: style.css
static/js/: app.js  tracking.js
templates/: base.html  dashboard.html  index.html  login.html  register.html  routes.html  track.html
